<resources>
    <string name="app_name">Toubib</string>
    <string name="action_settings">Settings</string>
    <string name="job_search_textview_text">Quel type de praticien ?</string>
    <string name="job_search_edittext_text">Rechercher...</string>
    <string name="city_search_textview_text">Dans quelle ville ?</string>
    <string name="city_search_edittext_text">Rechercher...</string>
    <string name="convention_checkbox_text">Afficher que les médecins conventionnés</string>

    <string name="search_button_text">Valider</string>
<<<<<<< HEAD
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="facebook_sign_in">Facebook</string>
    <string name="google_sign_in">Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="standard_sign_in">Inscription</string>
    <string name="standard_connect">Connexion</string>
    <string name="login_legal_textview_text">En m\'inscrivant, j\'accepte les Conditions générales ainsi que la Politique de confidentialité</string>
=======
    <string name="title_activity_search_results">Chercher un praticien</string>
    <string name="doctor_first_name_textview_text">Martin</string>
    <string name="doctor_last_name_textview_text">Dufour</string>
    <string name="doctor_address_textview_text">8 rue des oiseaux</string>
    <string name="doctor_postalCode_textview_text">75010</string>
    <string name="doctor_city_textview_text">Paris 10</string>
    <string name="doctor_contact_button_text">Contact</string>
    <string name="doctor_job_textview_text">Généraliste</string>
    <string name="doctor_convention_yes_button_text">Conventionné</string>
    <string name="doctor_convention_no_button_text">Non conventionné</string>
    <string name="title_toolbar">Chercher un praticien</string>

>>>>>>> origin/master
</resources>
