<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_home" tools:context=".home">

    <TextView
        android:id="@+id/job_search_textview"
        android:text="@string/job_search_textview_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/job_search_edittext"
        android:text="@string/job_search_edittext_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/job_search_textview"/>
    <TextView
        android:id="@+id/city_search_textview"
        android:text="@string/city_search_textview_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/job_search_edittext"/>
    <EditText
        android:id="@+id/city_search_edittext"
        android:text="@string/city_search_edittext_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_search_textview"/>
    <CheckBox
        android:id="@+id/convention_checkbox"
        android:text="@string/convention_checkbox_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_search_edittext"/>
    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convention_checkbox"/>

</RelativeLayout>
