<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_search_details" tools:context=".search_details">

    <RelativeLayout
        android:id="@+id/toolbar_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/title_toolbar"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:paddingLeft="40sp"/>
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="22sp"
            android:layout_height="22sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:layout_marginBottom="@dimen/champ_margin" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolbar_bis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        android:paddingRight="5sp"
        android:paddingBottom="15sp"
        android:paddingLeft="5sp"
        android:background="@drawable/back"
        android:layout_marginBottom="20sp"
        android:layout_below="@+id/toolbar_custom">
        <TextView
            android:id="@+id/doctor_job_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/doctornameColor"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:layout_marginBottom="5sp"
            android:text="@string/doctor_job_textview_text"/>
        <ImageView
            android:tint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_sort_by_size"
            android:layout_alignParentRight="true"
            />
        <LinearLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/doctor_job_textview">
            <Button
                android:id="@+id/doctor_convention_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:padding="5dp"
                android:background="@drawable/button_boarder"
                android:text="@string/doctor_convention_yes_button_text"
                android:layout_below="@+id/doctor_job_textview"/>
            <TextView
                android:id="@+id/doctor_slash_textview"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:textSize="20sp"
                android:textColor="@color/inputColor"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/doctor_convention_yes_button"
                android:layout_below="@+id/doctor_job_textview"
                android:text="/"/>
            <Button
                android:id="@+id/doctor_convention_no_button"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:textColor="@color/inputColor"
                android:textSize="12sp"
                android:padding="5sp"
                android:background="@drawable/button_boarder"
                android:layout_toRightOf="@+id/doctor_slash_textview"
                android:text="@string/doctor_convention_no_button_text"
                android:layout_below="@+id/doctor_job_textview"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_search_results"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_bis">
        <TextView
            android:id="@+id/doctor_first_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:text="@string/doctor_first_name_textview_text"
            android:textSize="20sp"
            android:textColor="@color/doctornameColor"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/toolbar_layout"/>
        <TextView
            android:id="@+id/doctor_last_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_last_name_textview_text"
            android:textSize="20sp"
            android:textColor="@color/doctornameColor"
            android:fontFamily="sans-serif"
            android:layout_toRightOf="@id/doctor_first_name_textview"
            android:layout_below="@+id/toolbar_layout"/>
        <TextView
            android:id="@+id/doctor_address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_address_textview_text"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp"
            android:layout_below="@+id/doctor_first_name_textview"/>
        <TextView
            android:id="@+id/doctor_city_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_city_textview_text"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_below="@+id/doctor_last_name_textview"
            android:layout_toRightOf="@+id/doctor_address_textview"/>
        <RatingBar
            android:id="@+id/rtbProductRating"
            android:layout_height="9sp"
            android:layout_width="wrap_content"
            android:layout_marginTop="4sp"
            android:layout_marginLeft="10sp"
            android:numStars="5"
            android:rating="3.5"
            android:isIndicator="false"
            style="@style/foodRatingBar"
            android:layout_toRightOf="@+id/doctor_city_textview"
            android:layout_toEndOf="@+id/doctor_city_textview"
            android:layout_below="@+id/doctor_first_name_textview"
            />
        <Button
            android:id="@+id/doctor_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_contact_button_text"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:layout_below="@+id/toolbar_layout"/>

    </RelativeLayout>


</RelativeLayout>
